--- a/ui-elements/index.html
+++ b/ui-elements/index.html
@@ -247,14 +247,89 @@
 				<span>Que no se te olviden las letras &#x1f609;</span>
 			</div>
 			<div class="text-input-container">
+				<input type="text" class="focus" placeholder="DNI / NIE" />
+				<span
+					>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officiis nemo, ducimus
+					iusto ea assumenda modi totam voluptate hic, aliquam
+				</span>
+			</div>
+			<div class="text-input-container">
 				<input type="text" class="ok" placeholder="DNI / NIE" value="00000000X" />
+				<span></span>
 			</div>
 			<div class="text-input-container">
 				<input type="text" class="error" placeholder="DNI / NIE" value="00000000X" />
-				<span>Parece que no es un número válido &#x1f62c;</span>
+				<span>Parece que no es un número válido &#128517;</span>
+			</div>
+			<div class="text-input-container">
+				<input type="text" class="info" placeholder="DNI / NIE" value="00000000X" />
+				<span>¿Estás seguro que es la información correcta? &#x1f62c;</span>
 			</div>
 			<div class="text-input-container">
 				<input type="text" disabled placeholder="DNI / NIE" class="disabled" />
+				<span></span>
+			</div>
+
+			<div class="form-container">
+				<div class="form-section">
+					<div class="form-info">
+						<h4>Información personal</h4>
+						<p class="small">
+							Usaremos esta información para poder enviarte el ticket y para poder convalidarte los
+							créditos
+						</p>
+					</div>
+					<div class="form-inputs">
+						<div class="text-input-container">
+							<input type="text" placeholder="Nombre" />
+							<span>Obligatorio</span>
+						</div>
+						<div class="text-input-container">
+							<input type="text" placeholder="Apellidos" />
+							<span>Obligatorio</span>
+						</div>
+						<div class="text-input-container">
+							<input type="text" placeholder="DNI / NIE" />
+							<span>Obligatorio</span>
+						</div>
+					</div>
+				</div>
+				<div class="form-section">
+					<div class="form-info">
+						<h4>Otra sección del formulario</h4>
+						<p class="small">
+							Usaremos esta información para poder enviarte el ticket y para poder convalidarte los
+							créditos
+						</p>
+					</div>
+					<div class="form-inputs">
+						<div class="text-input-container">
+							<input type="text" placeholder="Nombre" />
+							<span>Obligatorio</span>
+						</div>
+						<div class="text-input-container">
+							<input type="text" placeholder="Apellidos" />
+							<span>Obligatorio</span>
+						</div>
+						<div class="text-input-container">
+							<input type="text" placeholder="DNI / NIE" />
+							<span>Obligatorio</span>
+						</div>
+					</div>
+				</div>
+				<div class="form-section">
+					<div class="form-info">
+						<p class="small">
+							Sin título pero una breve descripción sobre el formulario
+						</p>
+					</div>
+					<div class="form-inputs">
+						<div class="text-input-container">
+							<input type="text" placeholder="Nombre" />
+							<span>Obligatorio</span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</body>
