--- a/ui-elements/index.html
+++ b/ui-elements/index.html
@@ -239,35 +239,73 @@
 
 		<section style="margin: 25px;">
 			<div class="text-input-container">
-				<input type="text" placeholder="DNI / NIE" />
-				<span>Obligatorio *</span>
+				<div>
+					<input type="text" style="max-width: 250px;" placeholder="DNI / NIE" />
+					<span>Obligatorio</span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" class="focus" placeholder="DNI / NIE" />
-				<span>Que no se te olviden las letras &#x1f609;</span>
+				<div>
+					<input type="text" style="max-width: 250px;" class="focus" placeholder="DNI / NIE" />
+					<span>Que no se te olviden las letras &#x1f609;</span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" class="focus" placeholder="DNI / NIE" />
-				<span
-					>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officiis nemo, ducimus
-					iusto ea assumenda modi totam voluptate hic, aliquam
-				</span>
+				<div>
+					<input type="text" style="max-width: 250px;" class="focus" placeholder="DNI / NIE" />
+					<span>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo officiis nemo,
+						ducimus iusto ea assumenda modi totam voluptate hic, aliquam
+					</span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" class="ok" placeholder="DNI / NIE" value="00000000X" />
-				<span></span>
+				<div>
+					<input
+						type="text"
+						style="max-width: 250px;"
+						class="ok"
+						placeholder="DNI / NIE"
+						value="00000000X"
+					/>
+					<span></span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" class="error" placeholder="DNI / NIE" value="00000000X" />
-				<span>Parece que no es un número válido &#128517;</span>
+				<div>
+					<input
+						type="text"
+						style="max-width: 250px;"
+						class="error"
+						placeholder="DNI / NIE"
+						value="00000000X"
+					/>
+					<span>Parece que no es un número válido &#128517;</span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" class="info" placeholder="DNI / NIE" value="00000000X" />
-				<span>¿Estás seguro que es la información correcta? &#x1f62c;</span>
+				<div>
+					<input
+						type="text"
+						style="max-width: 250px;"
+						class="info"
+						placeholder="DNI / NIE"
+						value="00000000X"
+					/>
+					<span>¿Estás seguro que es la información correcta? &#x1f62c;</span>
+				</div>
 			</div>
 			<div class="text-input-container">
-				<input type="text" disabled placeholder="DNI / NIE" class="disabled" />
-				<span></span>
+				<div>
+					<input
+						type="text"
+						style="max-width: 250px;"
+						disabled
+						placeholder="DNI / NIE"
+						class="disabled"
+					/>
+					<span></span>
+				</div>
 			</div>
 
 			<div class="form-container">
@@ -281,16 +319,22 @@
 					</div>
 					<div class="form-inputs">
 						<div class="text-input-container">
-							<input type="text" placeholder="Nombre" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="Nombre" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 						<div class="text-input-container">
-							<input type="text" placeholder="Apellidos" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="Apellidos" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 						<div class="text-input-container">
-							<input type="text" placeholder="DNI / NIE" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="DNI / NIE" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -304,16 +348,22 @@
 					</div>
 					<div class="form-inputs">
 						<div class="text-input-container">
-							<input type="text" placeholder="Nombre" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="Nombre" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 						<div class="text-input-container">
-							<input type="text" placeholder="Apellidos" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="Apellidos" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 						<div class="text-input-container">
-							<input type="text" placeholder="DNI / NIE" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="DNI / NIE" />
+								<span>Obligatorio</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -325,8 +375,30 @@
 					</div>
 					<div class="form-inputs">
 						<div class="text-input-container">
-							<input type="text" placeholder="Nombre" />
-							<span>Obligatorio</span>
+							<div>
+								<input type="text" placeholder="Nombre" />
+								<span>Obligatorio</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="form-section">
+					<div class="form-info">
+						<h4>Una última cosa...</h4>
+					</div>
+					<div class="form-inputs">
+						<div class="checkbox-container restrict-width">
+							<div>
+								<div>
+									<input id="option8" type="checkbox" />
+								</div>
+								<div class="checkbox-info">
+									<label for="option8">
+										El usuario concede a la organización el derecho de uso de las imágenes tomadas
+										durante el evento para su posible uso en redes sociales y página web.
+									</label>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
