--- a/ui-elements/index.html
+++ b/ui-elements/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="aside.css" />
 		<link rel="stylesheet" href="footer.css" />
 		<link rel="stylesheet" href="are-you-student.css" />
+		<link rel="stylesheet" href="badges.css" />
 		<script src="https://kit.fontawesome.com/358fa893fd.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: var(--neutral-10);">
@@ -511,6 +512,17 @@
 								</div>
 							</div>
 						</div>
+						<div class="tag-selection-container restrict-width" style="margin-top: 25px;">
+							<h5 class="form-question">¿En qué curso estás?</h5>
+							<ul>
+								<li>1</li>
+								<li class="active">2</li>
+								<li>3</li>
+								<li>4</li>
+								<li>5</li>
+								<li>6</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -543,6 +555,20 @@
 					</div>
 				</div>
 				<p class="small answer">Sí, soy estudiante de la UPM</p>
+			</div>
+		</section>
+		<section style="margin:25px">
+			<div class="badge platinum" style="margin: 25px 0;">
+				<span>Platino</span>
+			</div>
+			<div class="badge gold" style="margin: 25px 0;">
+				<span>Oro</span>
+			</div>
+			<div class="badge silver" style="margin: 25px 0;">
+				<span>Plata</span>
+			</div>
+			<div class="badge bronze" style="margin: 25px 0;">
+				<span>Bronce</span>
 			</div>
 		</section>
 	</body>
