--- a/ui-elements/index.html
+++ b/ui-elements/index.html
@@ -10,12 +10,13 @@
 			href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Source+Sans+Pro:400,600&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="main.css" />
 		<link rel="stylesheet" href="header.css" />
 		<link rel="stylesheet" href="aside.css" />
 		<link rel="stylesheet" href="footer.css" />
 		<link rel="stylesheet" href="are-you-student.css" />
 		<link rel="stylesheet" href="badges.css" />
+		<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+		<link rel="stylesheet" href="main.css" />
 		<script src="https://kit.fontawesome.com/358fa893fd.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: var(--neutral-10);">
@@ -569,6 +570,180 @@
 			</div>
 			<div class="badge bronze" style="margin: 25px 0;">
 				<span>Bronce</span>
+			</div>
+		</section>
+		<section style="margin: 25px;">
+			<div class="session-container">
+				<i class="fas fa-gift gift"></i>
+				<header>
+					<h3>
+						¿Sueñan los androides con ovejas eléctricas? Cómo puedo crear mis propias inteligencias
+						artificiales
+					</h3>
+				</header>
+				<div class="info-wrapper">
+					<div class="description">
+						Pequeña descrición de lo que hace y de lo que no hace. Si es muy larga ponemos, labore
+						et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+						dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+						eirmod.
+					</div>
+					<span class="room">Sala principal</span>
+					<div class="speakers-preview">
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis tiene un nombre muy largo</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis tiene un nombre muy largo</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis</h5>
+						</div>
+					</div>
+					<div
+						class="speakers-detail"
+						style="height: 400px; background-color: #c0c0c0; margin: 0 auto;"
+					>
+						TODO
+					</div>
+					<div class="company">
+						<img src="../assets/img/daetsiinf.png" alt="Logo empresa" />
+						<div class="badge platinum" style="margin: 25px 0;">
+							<span>Platino</span>
+						</div>
+					</div>
+				</div>
+				<div class="toogle-info">
+					<i class="fas fa-plus"></i>
+				</div>
+			</div>
+		</section>
+
+		<section style="margin: 25px;">
+			<div class="session-container open">
+				<i class="fas fa-gift gift"></i>
+				<header>
+					<h3>
+						¿Sueñan los androides con ovejas eléctricas? Cómo puedo crear mis propias inteligencias
+						artificiales
+					</h3>
+				</header>
+				<div class="info-wrapper">
+					<div class="description small">
+						Pequeña descrición de lo que hace y de lo que no hace. Si es muy larga ponemos, labore
+						et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+						dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+						dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+						eirmod.
+					</div>
+					<span class="room">Sala principal</span>
+					<div class="speakers-preview">
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis tiene un nombre muy largo</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis tiene un nombre muy largo</h5>
+						</div>
+						<div class="speaker">
+							<div>
+								<img
+									src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg"
+									alt="Random profile picture"
+								/>
+							</div>
+							<h5>José Luis</h5>
+						</div>
+					</div>
+					<!-- Swiper -->
+					<div class="swiper-container speakers-detail">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">Slide 1</div>
+							<div class="swiper-slide">Slide 2</div>
+							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide">Slide 4</div>
+							<div class="swiper-slide">Slide 5</div>
+							<div class="swiper-slide">Slide 6</div>
+							<div class="swiper-slide">Slide 7</div>
+							<div class="swiper-slide">Slide 8</div>
+							<div class="swiper-slide">Slide 9</div>
+							<div class="swiper-slide">Slide 10</div>
+						</div>
+						<!-- Add Pagination -->
+						<div class="swiper-pagination"></div>
+					</div>
+					<!-- Swiper JS -->
+					<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+					<script>
+						var swiper = new Swiper(".swiper-container", {
+							slidesPerView: 1,
+							centeredSlides: true,
+							spaceBetween: 5,
+							grabCursor: true,
+							pagination: {
+								el: ".swiper-pagination",
+								clickable: true
+							}
+						})
+					</script>
+					<div class="company">
+						<img src="../assets/img/daetsiinf.png" alt="Logo empresa" />
+						<div class="badge platinum" style="margin: 25px 0;">
+							<span>Platino</span>
+						</div>
+					</div>
+				</div>
+				<div class="toogle-info">
+					<i class="fas fa-plus"></i>
+				</div>
 			</div>
 		</section>
 	</body>
