moved assets for the ui-elements

--- a/ui-elements/index.html
+++ b/ui-elements/index.html
@@ -134,13 +134,13 @@
 						<div class="organizer">
 							<h6>Organiza</h6>
 							<div>
-								<img src="../assets/img/daetsiinf.png" alt="Logo de DA-ETSIINF" />
+								<img src="./assets/img/daetsiinf.png" alt="Logo de DA-ETSIINF" />
 							</div>
 						</div>
 						<div class="collaborators">
 							<h6>Colabora</h6>
 							<div>
-								<img src="../assets/img/ACM.png" alt="Logo de ACM" />
+								<img src="./assets/img/ACM.png" alt="Logo de ACM" />
 							</div>
 						</div>
 					</div>
@@ -635,7 +635,7 @@
 						TODO
 					</div>
 					<div class="company">
-						<img src="../assets/img/daetsiinf.png" alt="Logo empresa" />
+						<img src="./assets/img/daetsiinf.png" alt="Logo empresa" />
 						<div class="badge platinum" style="margin: 25px 0;">
 							<span>Platino</span>
 						</div>
@@ -975,7 +975,7 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="swiper-slide-image">
-							<img src="../assets/img/volunteers.jpg" alt="Voluntario Try IT!" />
+							<img src="./assets/img/volunteers.jpg" alt="Voluntario Try IT!" />
 						</div>
 						<div class="swiper-slide-content">
 							<h2>¿Quieres ser voluntario?</h2>
@@ -985,7 +985,7 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-slide-image">
-							<img src="../assets/img/volunteers.jpg" alt="Voluntario Try IT!" />
+							<img src="./assets/img/volunteers.jpg" alt="Voluntario Try IT!" />
 						</div>
 						<div class="swiper-slide-content">
 							<h2>¿Quieres ser voluntario?</h2>
