--- a/ui-elements/Cards/Cards.html
+++ b/ui-elements/Cards/Cards.html
@@ -8,13 +8,13 @@
     <body>
         <div class="tarjeta">
             <div class="lado_foto">
-            <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="Foto organizador" id="foto">
+            <img src="" alt="Foto organizador" id="foto">
             </div>
             <div class="info">
-                <h2 class="nombre">Álvaro Revuelta Noseque</h2>
-                <p class="funcion">Organizador y Delegado de Alumnos</p>
-                <p class="email">correo electrónico</p>
-                <p class="descripcion">Delegado de la FI de la UPM.</p>
+                <h2 class="nombre"></h2>
+                <p class="funcion"></p>
+                <p class="email"></p>
+                <p class="descripcion"></p>
             </div>
         </div>
     </body>
